/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

import "context.proto";

package aaa.protos;
option go_package = "magma/feg/gateway/services/aaa/protos";

// update_request with usages & included context
message change_request {
    context ctx = 1;
    string json_trfic_classes = 2;
}

message disconnect_request {
    context ctx = 1;
}

message coa_response {
    enum coa_response_type_enum {
        NAK = 0;
        ACK = 1;
    }
    coa_response_type_enum coa_response_type = 1;
    context ctx = 2;
}

service authorization {
    rpc change(change_request) returns (coa_response) {}
    rpc disconnect(disconnect_request) returns (coa_response) {}
}
